--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                      <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="cycle.html">Our Cycle</a>
+                     <a class="nav-link" href="cycle.html">Our Bikes</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="shop.html">Shop</a>
@@ -412,3 +412,4 @@
       </script>
    </body>
 </html>
+
